# cpp_snippets

./: .gitignore  AppLogger.cpp  AppLogger.h  FrameDispatcher.cpp  README.md  bin_copy  bin_copy.cpp  buffer_overflow  buffer_overflow.c  devicechangenotifier.cpp  devicechangenotifier.h  pointer_movment.cpp  test  test_struct.cpp  usbaccesslayer.cpp  usbaccesslayer.h
common/: AppLogger.cpp  AppLogger.h  FrameDispatcher.cpp  FrameDispatcher.h  defs.h
qt/: .gitignore  devicechangenotifier.cpp  devicechangenotifier.h  usbaccesslayer.cpp  usbaccesslayer.h
qt/cb_test/: CMakeLists.txt  main.cpp
rust_lib/: CMakeLists.txt  main  main.cpp  usb_com_bf.h
structs/: test_struct.cpp
